--- a/style.css
+++ b/style.css
@@ -444,6 +444,7 @@ body {
   line-height: 21px;
   letter-spacing: -0.01em;
   color: #1a2236;
+  margin-top: 4rem;
 }
 
 .get-started-form {
@@ -482,6 +483,7 @@ body {
   border: none;
   outline: none;
   color: #1a2236;
+  padding: 1.8rem 2rem;
 }
 
 .form-control-textarea textarea {
@@ -1296,6 +1298,55 @@ height: 7rem;
 background: #1A2236;
   }
 
+  /* **************GET STARTED*********** */
+
+  .get-started-desktop {
+   
+    padding: 16.8rem 44.9rem
+  }
+
+  .get-started-info h2 {
+    font-family: var(--font-family-secondary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11rem;
+    line-height: 100%;
+    color: #1a2236;
+    text-align: center;
+  }
+  .get-started-text {
+    margin-top: 4rem;
+  }
+  .get-started-form {
+    display: none;
+  }
+  .form-control-input input {
+    font-family: var(--font-family-primary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    margin-top: 0.4rem;
+    margin-bottom: 0.8rem;
+    border: none;
+    outline: none;
+    color: #1a2236;
+  }
+  .textarea-section{
+    margin-top: 2rem;
+  }
+  .form-control-input-section label,
+  .textarea-section label{
+    display: inline-block;
+    font-family: var(--font-family-primary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding-top: 0.4rem;
+    color: #7d7c84;
+    margin-bottom: 0.4rem;
+  }
  
 
 }
