--- a/style.css
+++ b/style.css
@@ -1060,16 +1060,24 @@ body {
   .desktop-last-img img {
     width: 100%;
   }
-  .card-four{
+  .framwork-card{
+    padding: 5rem 5rem 5.3rem;
+  }
+  .framwork-card-desktop{
+    display: contents;
     position: relative;
+    padding: 0;
+    background-color: red;
   }
   .inner-image-desktop {
-    width: 8rem;
-    height: 8rem;
+    width: 15.7rem;
+    height: 15.3rem;
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-40%, 0%);
+    bottom:2%;
+    left: 33%;
+   
+    
+    /* transform: translate(-0, -50%); */
   }
 
   .inner-image-desktop img {
@@ -1081,7 +1089,7 @@ body {
     height: 6.2rem;
     
     position: absolute;
-    top: 40%;
+    top:18%;
     right: 0;
   }
 
@@ -1346,6 +1354,15 @@ background: #1A2236;
     padding-top: 0.4rem;
     color: #7d7c84;
     margin-bottom: 0.4rem;
+  }
+  .footer-section {
+    padding: 4.8rem 16.4rem 4.8rem 16rem;
+    
+  }
+  .footer-container {
+    display: flex;
+    align-items: center;
+    gap: 69.8rem;
   }
  
 
