--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ body {
 }
 
 /* PADDING AND MARGIN SECTION */
+.margin-form-mobile {
+  margin-top: 0.8rem;
+}
 .margin-lg {
   margin-top: 5.6rem;
 }
@@ -248,7 +251,7 @@ body {
 }
 
 .project-description {
-  padding: 6rem;
+  padding: 2rem;
   background: #1a2236;
 }
 
@@ -574,6 +577,18 @@ body {
   list-style: none;
   cursor: pointer;
 }
+.get-started-info h2{
+  font-family: var(--font-family-secondary);
+font-style: normal;
+font-weight: 400;
+font-size: 5rem;
+line-height: 100%;
+/* identical to box height, or 50px */
+
+
+color: #1A2236;
+
+}
 
 .footer-icon {
   width: 2.4rem;
@@ -609,6 +624,10 @@ body {
 .get-started-form-desktop {
   display: none;
 }
+.framwork-card-desktop{
+  display: none;
+}
+
 
 /********************** media queries applies here****************** */
 
