--- a/style.css
+++ b/style.css
@@ -1341,6 +1341,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 16.8rem 44.6rem 13.5rem 44.6rem;
   }
 
