--- a/style.css
+++ b/style.css
@@ -82,17 +82,6 @@ body {
   text-align: center;
   margin-top: 4rem;
 }
-@keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 
 
 .sidebar-toggle-links{
@@ -102,8 +91,8 @@ body {
 .sidebar-toggle-links li a{
   font-family: 'Poppins';
 font-style: normal;
-font-weight: 400;
-font-size: 1.8rem;
+font-weight: 500;
+font-size: 2rem;
 line-height: 300%;
 color: #000000;
 cursor: pointer;
@@ -731,6 +720,9 @@ a {
 
 @media (min-width: 768px) {
   .mobile-nav {
+    display: none;
+  }
+  .sidebar-toggle{
     display: none;
   }
 
@@ -1530,5 +1522,8 @@ a {
     display: flex;
     align-items: center;
     gap: 2.9rem;
+  }
+  .sidebar-toggle{
+    display: none;
   }
 }
