Add css functionality to stop the page from scrolling

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
   color: #555;
 }
 
+body.open-modal {
+  height: 100vh;
+  overflow: hidden;
+}
+
 :root {
   --color-tint: #fdf2e9;
   --primary-white: #fff;
@@ -53,7 +58,7 @@ body {
 }
 
 .sidebar-toggle { 
-  /* height:100vh; */
+  height:100vh;
   width:100vw;
   background:rgba(255, 255, 255, 1);
   position: absolute;
